UNDO in Caps and text-underline spacing fixed

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -372,6 +372,7 @@ font-weight: bold;
 .link-text-underline {
   text-decoration: underline !important;
   cursor: pointer;
+  text-underline-offset: 0.3rem;
 }
 .text-underline {
   text-decoration: underline !important;
